.antlr/typescriptParser.java
// Generated from c:\Users\jandr\Documents\GitHub\Lab0_Compis2\typescript.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class typescriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, DOT=3, COLON=4, COMMA=5, SEMICOLON=6, PLUS=7, MINUS=8, 
		MUL=9, DIV=10, POWER=11, ROUND_LEFT=12, ROUND_RIGHT=13, CURLY_LEFT=14, 
		CURLY_RIGHT=15, BRACKET_LEFT=16, BRACKET_RIGHT=17, AND=18, OR=19, NOT=20, 
		OPTIONAL=21, EQ=22, STRICT_EQ=23, NEQ=24, STRICT_NEQ=25, LT=26, LE=27, 
		GT=28, GE=29, IF=30, ELSE=31, RETURN=32, FUNCTION=33, STRING=34, NUMBER=35, 
		BOOLEAN=36, ARROW=37, WHILE=38, FOR=39, IN=40, OF=41, CONST=42, VAR=43, 
		LET=44, EQUAL=45, BREAK=46, CONTINUE=47, DELETE=48, DO=49, IDENTIFIER=50, 
		CHARS=51, DIGITS=52, WS=53, LINE_COMMENT=54, WHITESPACE=55;
	public static final int
		RULE_sAll = 0, RULE_sOperand = 1, RULE_sOperator = 2, RULE_sExpression = 3, 
		RULE_sTerm = 4, RULE_sValue = 5, RULE_sInvocation = 6, RULE_sControl = 7, 
		RULE_sStatement = 8, RULE_sPlus = 9, RULE_sMinus = 10, RULE_sMul = 11, 
		RULE_sDiv = 12, RULE_sPower = 13, RULE_sAnd = 14, RULE_sOr = 15, RULE_sNot = 16, 
		RULE_sEquals = 17, RULE_sNotEquals = 18, RULE_sLowerThan = 19, RULE_sLowerEquals = 20, 
		RULE_sGreaterThan = 21, RULE_sGreaterEquals = 22, RULE_sArithmeticExpression = 23, 
		RULE_sArithmeticTerm = 24, RULE_sBooleanOperand = 25, RULE_sBooleanOperator = 26, 
		RULE_sBooleanExpression = 27, RULE_sBooleanTerm = 28, RULE_sNumberOperand = 29, 
		RULE_sNumberOperator = 30, RULE_sNumberExpression = 31, RULE_sNumberTerm = 32, 
		RULE_sStringOperand = 33, RULE_sStringOperator = 34, RULE_sStringExpression = 35, 
		RULE_sStringTerm = 36, RULE_sConcatOperand = 37, RULE_sConcatExpression = 38, 
		RULE_sConcatLeft = 39, RULE_sConcatRight = 40, RULE_sConcatBoth = 41, 
		RULE_sType = 42, RULE_sOptional = 43, RULE_sPropertyDelete = 44, RULE_sFunction = 45, 
		RULE_sFunctionArg = 46, RULE_sFunctionArgs = 47, RULE_sFunctionArgDef = 48, 
		RULE_sFunctionArgDefs = 49, RULE_sFunctionHead = 50, RULE_sFunctionTail = 51, 
		RULE_sFunctionCall = 52, RULE_sFunctionLambda = 53, RULE_sProperty = 54, 
		RULE_sPropertyAware = 55, RULE_sPropertyAccess = 56, RULE_sFunctionAware = 57, 
		RULE_sFunctionAccess = 58, RULE_sLine = 59, RULE_sBody = 60, RULE_sReturn = 61, 
		RULE_sIf = 62, RULE_sElse = 63, RULE_sElseIf = 64, RULE_sString = 65, 
		RULE_sNumber = 66, RULE_sBoolean = 67, RULE_sArray = 68, RULE_sMap = 69, 
		RULE_sEndlessLoop = 70, RULE_sWhile = 71, RULE_sDoWhile = 72, RULE_sFor = 73, 
		RULE_sForOf = 74, RULE_sForIn = 75, RULE_sLoopTail = 76, RULE_sContinue = 77, 
		RULE_sBreak = 78, RULE_sMutableVar = 79, RULE_sImmutableVar = 80, RULE_sAssignment = 81, 
		RULE_sIncrement = 82, RULE_sDecrement = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"sAll", "sOperand", "sOperator", "sExpression", "sTerm", "sValue", "sInvocation", 
			"sControl", "sStatement", "sPlus", "sMinus", "sMul", "sDiv", "sPower", 
			"sAnd", "sOr", "sNot", "sEquals", "sNotEquals", "sLowerThan", "sLowerEquals", 
			"sGreaterThan", "sGreaterEquals", "sArithmeticExpression", "sArithmeticTerm", 
			"sBooleanOperand", "sBooleanOperator", "sBooleanExpression", "sBooleanTerm", 
			"sNumberOperand", "sNumberOperator", "sNumberExpression", "sNumberTerm", 
			"sStringOperand", "sStringOperator", "sStringExpression", "sStringTerm", 
			"sConcatOperand", "sConcatExpression", "sConcatLeft", "sConcatRight", 
			"sConcatBoth", "sType", "sOptional", "sPropertyDelete", "sFunction", 
			"sFunctionArg", "sFunctionArgs", "sFunctionArgDef", "sFunctionArgDefs", 
			"sFunctionHead", "sFunctionTail", "sFunctionCall", "sFunctionLambda", 
			"sProperty", "sPropertyAware", "sPropertyAccess", "sFunctionAware", "sFunctionAccess", 
			"sLine", "sBody", "sReturn", "sIf", "sElse", "sElseIf", "sString", "sNumber", 
			"sBoolean", "sArray", "sMap", "sEndlessLoop", "sWhile", "sDoWhile", "sFor", 
			"sForOf", "sForIn", "sLoopTail", "sContinue", "sBreak", "sMutableVar", 
			"sImmutableVar", "sAssignment", "sIncrement", "sDecrement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'.'", "':'", "','", "';'", "'+'", "'-'", 
			"'*'", "'/'", "'**'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'&&'", 
			"'||'", "'!'", "'?'", "'=='", "'==='", "'!='", "'!=='", "'<'", "'<='", 
			"'>'", "'>='", "'if'", "'else'", "'return'", "'function'", "'string'", 
			"'number'", "'boolean'", "'=>'", "'while'", "'for'", "'in'", "'of'", 
			"'const'", "'var'", "'let'", "'='", "'break'", "'continue'", "'delete'", 
			"'do'", null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "DOT", "COLON", "COMMA", "SEMICOLON", "PLUS", 
			"MINUS", "MUL", "DIV", "POWER", "ROUND_LEFT", "ROUND_RIGHT", "CURLY_LEFT", 
			"CURLY_RIGHT", "BRACKET_LEFT", "BRACKET_RIGHT", "AND", "OR", "NOT", "OPTIONAL", 
			"EQ", "STRICT_EQ", "NEQ", "STRICT_NEQ", "LT", "LE", "GT", "GE", "IF", 
			"ELSE", "RETURN", "FUNCTION", "STRING", "NUMBER", "BOOLEAN", "ARROW", 
			"WHILE", "FOR", "IN", "OF", "CONST", "VAR", "LET", "EQUAL", "BREAK", 
			"CONTINUE", "DELETE", "DO", "IDENTIFIER", "CHARS", "DIGITS", "WS", "LINE_COMMENT", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "typescript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public typescriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SAllContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(typescriptParser.EOF, 0); }
		public List<SInvocationContext> sInvocation() {
			return getRuleContexts(SInvocationContext.class);
		}
		public SInvocationContext sInvocation(int i) {
			return getRuleContext(SInvocationContext.class,i);
		}
		public List<SPropertyContext> sProperty() {
			return getRuleContexts(SPropertyContext.class);
		}
		public SPropertyContext sProperty(int i) {
			return getRuleContext(SPropertyContext.class,i);
		}
		public List<SExpressionContext> sExpression() {
			return getRuleContexts(SExpressionContext.class);
		}
		public SExpressionContext sExpression(int i) {
			return getRuleContext(SExpressionContext.class,i);
		}
		public List<STermContext> sTerm() {
			return getRuleContexts(STermContext.class);
		}
		public STermContext sTerm(int i) {
			return getRuleContext(STermContext.class,i);
		}
		public List<SValueContext> sValue() {
			return getRuleContexts(SValueContext.class);
		}
		public SValueContext sValue(int i) {
			return getRuleContext(SValueContext.class,i);
		}
		public List<SControlContext> sControl() {
			return getRuleContexts(SControlContext.class);
		}
		public SControlContext sControl(int i) {
			return getRuleContext(SControlContext.class,i);
		}
		public List<SReturnContext> sReturn() {
			return getRuleContexts(SReturnContext.class);
		}
		public SReturnContext sReturn(int i) {
			return getRuleContext(SReturnContext.class,i);
		}
		public List<SFunctionContext> sFunction() {
			return getRuleContexts(SFunctionContext.class);
		}
		public SFunctionContext sFunction(int i) {
			return getRuleContext(SFunctionContext.class,i);
		}
		public List<SStatementContext> sStatement() {
			return getRuleContexts(SStatementContext.class);
		}
		public SStatementContext sStatement(int i) {
			return getRuleContext(SStatementContext.class,i);
		}
		public SAllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sAll; }
	}

	public final SAllContext sAll() throws RecognitionException {
		SAllContext _localctx = new SAllContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sAll);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << ROUND_LEFT) | (1L << CURLY_LEFT) | (1L << BRACKET_LEFT) | (1L << NOT) | (1L << IF) | (1L << RETURN) | (1L << FUNCTION) | (1L << WHILE) | (1L << FOR) | (1L << CONST) | (1L << VAR) | (1L << LET) | (1L << BREAK) | (1L << CONTINUE) | (1L << DELETE) | (1L << DO) | (1L << IDENTIFIER) | (1L << CHARS) | (1L << DIGITS))) != 0)) {
				{
				setState(177);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(168);
					sInvocation();
					}
					break;
				case 2:
					{
					setState(169);
					sProperty();
					}
					break;
				case 3:
					{
					setState(170);
					sExpression();
					}
					break;
				case 4:
					{
					setState(171);
					sTerm();
					}
					break;
				case 5:
					{
					setState(172);
					sValue();
					}
					break;
				case 6:
					{
					setState(173);
					sControl();
					}
					break;
				case 7:
					{
					setState(174);
					sReturn();
					}
					break;
				case 8:
					{
					setState(175);
					sFunction();
					}
					break;
				case 9:
					{
					setState(176);
					sStatement();
					}
					break;
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SOperandContext extends ParserRuleContext {
		public SNumberContext sNumber() {
			return getRuleContext(SNumberContext.class,0);
		}
		public SPropertyContext sProperty() {
			return getRuleContext(SPropertyContext.class,0);
		}
		public SInvocationContext sInvocation() {
			return getRuleContext(SInvocationContext.class,0);
		}
		public SOperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sOperand; }
	}

	public final SOperandContext sOperand() throws RecognitionException {
		SOperandContext _localctx = new SOperandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sOperand);
		try {
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				sNumber();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(185);
				sProperty();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(186);
				sInvocation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SOperatorContext extends ParserRuleContext {
		public SPlusContext sPlus() {
			return getRuleContext(SPlusContext.class,0);
		}
		public SMinusContext sMinus() {
			return getRuleContext(SMinusContext.class,0);
		}
		public SMulContext sMul() {
			return getRuleContext(SMulContext.class,0);
		}
		public SDivContext sDiv() {
			return getRuleContext(SDivContext.class,0);
		}
		public SPowerContext sPower() {
			return getRuleContext(SPowerContext.class,0);
		}
		public SOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sOperator; }
	}

	public final SOperatorContext sOperator() throws RecognitionException {
		SOperatorContext _localctx = new SOperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sOperator);
		try {
			setState(194);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				sPlus();
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				sMinus();
				}
				break;
			case MUL:
				enterOuterAlt(_localctx, 3);
				{
				setState(191);
				sMul();
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 4);
				{
				setState(192);
				sDiv();
				}
				break;
			case POWER:
				enterOuterAlt(_localctx, 5);
				{
				setState(193);
				sPower();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SExpressionContext extends ParserRuleContext {
		public SConcatExpressionContext sConcatExpression() {
			return getRuleContext(SConcatExpressionContext.class,0);
		}
		public SArithmeticExpressionContext sArithmeticExpression() {
			return getRuleContext(SArithmeticExpressionContext.class,0);
		}
		public SBooleanExpressionContext sBooleanExpression() {
			return getRuleContext(SBooleanExpressionContext.class,0);
		}
		public SNumberExpressionContext sNumberExpression() {
			return getRuleContext(SNumberExpressionContext.class,0);
		}
		public SStringExpressionContext sStringExpression() {
			return getRuleContext(SStringExpressionContext.class,0);
		}
		public SExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sExpression; }
	}

	public final SExpressionContext sExpression() throws RecognitionException {
		SExpressionContext _localctx = new SExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sExpression);
		try {
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				sConcatExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(197);
				sArithmeticExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(198);
				sBooleanExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(199);
				sNumberExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(200);
				sStringExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class STermContext extends ParserRuleContext {
		public SArithmeticTermContext sArithmeticTerm() {
			return getRuleContext(SArithmeticTermContext.class,0);
		}
		public SBooleanTermContext sBooleanTerm() {
			return getRuleContext(SBooleanTermContext.class,0);
		}
		public STermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sTerm; }
	}

	public final STermContext sTerm() throws RecognitionException {
		STermContext _localctx = new STermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sTerm);
		try {
			setState(205);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(203);
				sArithmeticTerm();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(204);
				sBooleanTerm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SValueContext extends ParserRuleContext {
		public SNumberContext sNumber() {
			return getRuleContext(SNumberContext.class,0);
		}
		public SBooleanContext sBoolean() {
			return getRuleContext(SBooleanContext.class,0);
		}
		public SStringContext sString() {
			return getRuleContext(SStringContext.class,0);
		}
		public SArrayContext sArray() {
			return getRuleContext(SArrayContext.class,0);
		}
		public SMapContext sMap() {
			return getRuleContext(SMapContext.class,0);
		}
		public SValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sValue; }
	}

	public final SValueContext sValue() throws RecognitionException {
		SValueContext _localctx = new SValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sValue);
		try {
			setState(212);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGITS:
				enterOuterAlt(_localctx, 1);
				{
				setState(207);
				sNumber();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(208);
				sBoolean();
				}
				break;
			case CHARS:
				enterOuterAlt(_localctx, 3);
				{
				setState(209);
				sString();
				}
				break;
			case BRACKET_LEFT:
				enterOuterAlt(_localctx, 4);
				{
				setState(210);
				sArray();
				}
				break;
			case CURLY_LEFT:
				enterOuterAlt(_localctx, 5);
				{
				setState(211);
				sMap();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SInvocationContext extends ParserRuleContext {
		public SPropertyAccessContext sPropertyAccess() {
			return getRuleContext(SPropertyAccessContext.class,0);
		}
		public SFunctionAccessContext sFunctionAccess() {
			return getRuleContext(SFunctionAccessContext.class,0);
		}
		public SFunctionCallContext sFunctionCall() {
			return getRuleContext(SFunctionCallContext.class,0);
		}
		public SPropertyDeleteContext sPropertyDelete() {
			return getRuleContext(SPropertyDeleteContext.class,0);
		}
		public SInvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sInvocation; }
	}

	public final SInvocationContext sInvocation() throws RecognitionException {
		SInvocationContext _localctx = new SInvocationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sInvocation);
		try {
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(214);
				sPropertyAccess();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(215);
				sFunctionAccess();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(216);
				sFunctionCall();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(217);
				sPropertyDelete();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SControlContext extends ParserRuleContext {
		public SIfContext sIf() {
			return getRuleContext(SIfContext.class,0);
		}
		public SWhileContext sWhile() {
			return getRuleContext(SWhileContext.class,0);
		}
		public SDoWhileContext sDoWhile() {
			return getRuleContext(SDoWhileContext.class,0);
		}
		public SForContext sFor() {
			return getRuleContext(SForContext.class,0);
		}
		public SForOfContext sForOf() {
			return getRuleContext(SForOfContext.class,0);
		}
		public SForInContext sForIn() {
			return getRuleContext(SForInContext.class,0);
		}
		public SEndlessLoopContext sEndlessLoop() {
			return getRuleContext(SEndlessLoopContext.class,0);
		}
		public SContinueContext sContinue() {
			return getRuleContext(SContinueContext.class,0);
		}
		public SBreakContext sBreak() {
			return getRuleContext(SBreakContext.class,0);
		}
		public SControlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sControl; }
	}
